fix: Mistakes in the code